--- a/cli-release/tasks/update-brew-formula.yml
+++ b/cli-release/tasks/update-brew-formula.yml
@@ -46,6 +46,19 @@ run:
 
       def install
         bin.install 'cf'
+        (bash_completion/"cf-cli").write <<-completion
+          _cf-cli() {
+              # All arguments except the first one
+              args=("${COMP_WORDS[@]:1:$COMP_CWORD}")
+              # Only split on newlines
+              local IFS=$'\n'
+              # Call completion (note that the first element of COMP_WORDS is
+              # the executable itself)
+              COMPREPLY=($(GO_FLAGS_COMPLETION=1 ${COMP_WORDS[0]} "${args[@]}"))
+              return 0
+          }
+          complete -F _cf-cli cf
+        completion
         doc.install 'LICENSE'
         doc.install 'NOTICE'
       end
