--- a/ci/infrastructure/tasks/deploy-diego.yml
+++ b/ci/infrastructure/tasks/deploy-diego.yml
@@ -29,6 +29,9 @@ run:
     bosh upload release netman-release/release.tgz --skip-if-exists
 
     pushd diego-repo
+      DIEGO_VERSION=bosh releases | grep diego | cut -d "|" -f 3
+      git checkout v$DIEGO_VERSION
+
       bosh download manifest cf-warden cf.yml
 
       scripts/generate-deployment-manifest \
