--- a/ci/infrastructure/tasks/deploy-diego.yml
+++ b/ci/infrastructure/tasks/deploy-diego.yml
@@ -29,7 +29,7 @@ run:
     bosh upload release netman-release/release.tgz --skip-if-exists
 
     pushd diego-repo
-      DIEGO_VERSION=$(bosh releases | grep diego | cut -d "|" -f 3)
+      DIEGO_VERSION=$(bosh releases | grep diego | cut -d "|" -f 3 | cut -d "*" -f 1 | xargs)
       git checkout v$DIEGO_VERSION
 
       bosh download manifest cf-warden cf.yml
