--- a/cli/pipeline.yml
+++ b/cli/pipeline.yml
@@ -172,12 +172,13 @@ resources:
     branch: master
     pool: bosh-lites-diego
 
-- name: cf-cli-tracker
-  type: tracker
-  source:
-    token: {{cf-cli-public-tracker-token}}
-    project_id: {{cf-cli-public-tracker-project-id}}
-    tracker_url: https://www.pivotaltracker.com
+# disabled until https://github.com/concourse/tracker-resource/issues/17 is fixed
+# - name: cf-cli-tracker
+#   type: tracker
+#   source:
+#     token: {{cf-cli-public-tracker-token}}
+#     project_id: {{cf-cli-public-tracker-project-id}}
+#     tracker_url: https://www.pivotaltracker.com
 
 - name: golang
   type: docker-image
@@ -570,10 +571,11 @@ jobs:
     - put: edge-windows-installer-64
       params:
         file: winstallers/cf-cli-installer_winx64.zip
-  - put: cf-cli-tracker
-    params:
-      repos:
-      - cli
+  # disabled until https://github.com/concourse/tracker-resource/issues/17 is fixed
+  # - put: cf-cli-tracker
+  #   params:
+  #     repos:
+  #     - cli
 
 - name: create-cli-ci-image
   serial: true
